--- a/src/content/docs/reference/Buffers/image_format.mdx
+++ b/src/content/docs/reference/Buffers/image_format.mdx
@@ -1,18 +1,18 @@
 ---
-title: Texture Format
-description: Available texture formats for buffers.
+title: Image Format
+description: Available image formats for buffers.
 sidebar:
-  label: Texture Format
+  label: Image Format
   order: 4
 ---
 
 import { Aside } from '@astrojs/starlight/components';
 
-Color attachments such as [colortex](/reference/buffers/colortex) and [shadowcolor](/reference/buffers/shadowcolor) buffers, as well as custom [images](/reference/buffers/custom_images/) and [textures](/reference/buffers/custom_textures/), store values in a specific format.
+Color attachments such as [colortex](/reference/buffers/colortex) and [shadowcolor](/reference/buffers/shadowcolor) buffers, as well as custom [images](/reference/buffers/custom_images/) and [textures](/reference/buffers/custom_textures/), store values in different formats with varying bit depth and layout.
 
 The default format for color attachments is `RGBA` (which equates to `RGBA8` on most systems). However, a shader pack can specify the format using the [\<bufferName\>Format](/reference/constants/buffer_format) directive.
 
-The available texture formats and their meanings are described below.
+The available image formats and their meanings are described below.
 
 ## Normalized
 
