--- a/src/content/docs/reference/Shaders.Properties/flags.mdx
+++ b/src/content/docs/reference/Shaders.Properties/flags.mdx
@@ -31,15 +31,16 @@ Then you could check for this with
 
 The following is an index of all supported feature flags. Any feature flag marked as "**Required For Use**" must be set in `iris.features.required` or `iris.features.optional` in order to use the feature, otherwise Iris will throw an error.
 
-| Feature Flag                                   | Required For Use | Description |
-| ---------------------------------------------- | :--------------: | ----------- |
-| `SEPARATE_HARDWARE_SAMPLERS`                   | ✔️               | Enables [Separate Hardware Shadow Samplers](/reference/buffers/shadowtex#hardware-sampling) |
-| `HIGHER_SHADOWCOLOR`                           | ✔️               | Enables [additional shadowcolor](/reference/buffers/shadowcolor#extended-shadowcolor) buffers |
-| `PER_BUFFER_BLENDING`                          | ❌               | Queries hardware support for per-buffer blending |
-| `COMPUTE_SHADERS`                              | ❌               | Queries support for compute shaders |
-| `TESSELATION_SHADERS` / `TESSELLATION_SHADERS` | ✔️               | Enables tesselation shaders |
-| `ENTITY_TRANSLUCENT`                           | ❌               | Queries support for [`gbuffers_entities_translucent`](/reference/programs/gbuffers#iris-additional-programs) |
-| `SSBO`                                         | ✔️               | Enables [SSBOs](/reference/buffers/ssbo) |
-| `CUSTOM_IMAGES`                                | ✔️               | Enables [custom images](/reference/buffers/custom_images) |
-| `REVERSED_CULLING`                             | ❌               | Queries support for [Reverse Shadow Culling](/reference/constants/voxeldistance) |
-| `BLOCK_EMISSION_ATTRIBUTE`                     | ❌               | Queries support for the [block emission attribute](/reference/attributes/at_midblock) (`at_midBlock.w`) |
+| Feature Flag                                   | Required For Use | Description                                                                                                  |
+| ---------------------------------------------- | :--------------: | ------------------------------------------------------------------------------------------------------------ |
+| `BLOCK_EMISSION_ATTRIBUTE`                     | ❌                | Queries support for the [block emission attribute](/reference/attributes/at_midblock) (`at_midBlock.w`)      |
+| `CAN_DISABLE_WEATHER`                          | ❌                | Queries support for the [`weather`](/reference/shadersproperties/features#weather) directive                 |
+| `COMPUTE_SHADERS`                              | ❌                | Queries support for compute shaders                                                                          |
+| `CUSTOM_IMAGES`                                | ✔️                | Enables [custom images](/reference/buffers/custom_images)                                                    |
+| `ENTITY_TRANSLUCENT`                           | ❌                | Queries support for [`gbuffers_entities_translucent`](/reference/programs/gbuffers#iris-additional-programs) |
+| `HIGHER_SHADOWCOLOR`                           | ✔️                | Enables [additional shadowcolor](/reference/buffers/shadowcolor#extended-shadowcolor) buffers                |
+| `PER_BUFFER_BLENDING`                          | ❌                | Queries hardware support for per-buffer blending                                                             |
+| `REVERSED_CULLING`                             | ❌                | Queries support for [Reverse Shadow Culling](/reference/constants/voxeldistance)                             |
+| `SEPARATE_HARDWARE_SAMPLERS`                   | ✔️                | Enables [Separate Hardware Shadow Samplers](/reference/buffers/shadowtex#hardware-sampling)                  |
+| `SSBO`                                         | ✔️                | Enables [SSBOs](/reference/buffers/ssbo)                                                                     |
+| `TESSELATION_SHADERS` / `TESSELLATION_SHADERS` | ✔️                | Enables tesselation shaders                                                                                  |
