--- a/src/content/docs/reference/Shaders.Properties/overview.mdx
+++ b/src/content/docs/reference/Shaders.Properties/overview.mdx
@@ -98,7 +98,7 @@ Feature flags are an Iris system to query the activation state of certain featur
 | [oldLighting](/reference/shadersproperties/features#oldlighting)                         | Enables the "old lighting", which applies a lighting multiplier in the color attribute based on the block's orientation |                                                    |
 | [separateAo](/reference/shadersproperties/features#separateao)                           | Controls whether vanilla AO is stored in the RGB or A components of the color vertex attribute                          |                                                    |
 | [supportsColorCorrection](/reference/shadersproperties/features#supportscolorcorrection) | Allows the shader to perform its own conversion to a different color space                                              | <Badge text="Iris Exclusive" variant="tip"/>       |
-| [weather](/reference/shadersproperties/features#weather)                                 | Enables or disables weather (rain & snow) geometry and rain splash particles.                                           | <Badge text="Iris Exclusive" variant="tip"/>       |
+| [weather](/reference/shadersproperties/features#weather)                                 | Enables or disables weather (rain & snow) geometry and rain splash particles.                                           | <Badge text="Iris Beta Exclusive" variant="note"/> |
 
 
 ### Rendering
