--- a/src/content/docs/guides/Beginners/Your First Shader/5_fog.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/5_fog.mdx
@@ -36,7 +36,7 @@ vec3 projectAndDivide(mat4 projectionMatrix, vec3 position){
   return homPos.xyz / homPos.w;
 }
 
-/* DRAWBUFFERS:0 */
+/* RENDERTARGETS: 0 */
 layout(location = 0) out vec4 color;
 
 void main() {
