fix typos and improve comment readability in shadow section

--- a/src/content/docs/guides/Beginners/Your First Shader/1_composite.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/1_composite.mdx
@@ -11,7 +11,7 @@ This tutorial is still being developed. Some statements may be incorrect, and th
 :::
 
 ## Setting up the file structure
-Minecraft shaders require a specific structure of files in the right places to load code. While it's important to understand this structure, to save time, we will be working with the Base 330 pack from shaderLABs. Download it from [here](https://github.com/shaderLABS/Base-330), and extract it into your `shaderpacks` folder. You should have the following structure.
+Minecraft shaders require a specific structure of files in the right places to load code. While it's important to understand this structure, to save time, we will be working with the Base 330 pack from shaderLABS. Download it from [here](https://github.com/shaderLABS/Base-330), and extract it into your `shaderpacks` folder. You should have the following structure.
 
 ```
 .
