--- a/src/content/docs/guides/Beginners/Your First Shader/4_shadows.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/4_shadows.mdx
@@ -186,9 +186,9 @@ We can then add
 ```glsl
 #include /lib/distort.glsl
 ```
-to our `shadow.vsh`. *This should be included before the `main` function, as you cannot define functions within a function. I put mine just before my `out` declarations.
+to our `shadow.vsh`. *This should be included before the `main` function, as you cannot define functions within a function.* I put mine just before my `out` declarations.
 
-**We should also move our declaration of `shadowmapresolution` to `distort.glsl`.** This way, we can access this variable anywhere we are sampling the shadow map.
+**We should also move our declaration of `shadowMapResolution` to `distort.glsl`.** This way, we can access this variable anywhere we are sampling the shadow map.
 
 :::caution[Warning]
 Preprocessor directives *do not have a semicolon on the end*.
@@ -268,21 +268,35 @@ Let's go back to `composite.fsh` and make a new function called `getShadow`. It 
 vec3 getShadow(vec3 shadowScreenPos){
 	float transparentShadow = step(shadowScreenPos.z, texture(shadowtex0, shadowScreenPos.xy).r); // sample the shadow map containing everything
 
-	// note that a value of 1.0 means 100% of sunlight is getting through, not that there is 100% shadowing
+	/*
+	note that a value of 1.0 means 100% of sunlight is getting through
+	not that there is 100% shadowing
+	*/
 
-	if(transparentShadow == 1.0){ // since this shadow map contains everything, there is no shadow at all so we return full sunlight
+	if(transparentShadow == 1.0){ 
+		/*
+		since this shadow map contains everything, 
+		there is no shadow at all, so we return full sunlight
+		*/
 		return vec3(1.0);
 	}
 
 	float opaqueShadow = step(shadowScreenPos.z, texture(shadowtex1, shadowScreenPos.xy).r); // sample the shadow map containing only opaque stuff
 
-	if(opaqueShadow == 0.0){ // there is a shadow cast by something opaque, so we return no sunlight
+	if(opaqueShadow == 0.0){ 
+		// there is a shadow cast by something opaque, so we return no sunlight
 		return vec3(0.0);
 	}
 
-	vec4 shadowColor = texture(shadowcolor0, shadowScreenPos.xy); // contains the color and alpha (transparency) of the thing casting a shadow
+	// contains the color and alpha (transparency) of the thing casting a shadow
+	vec4 shadowColor = texture(shadowcolor0, shadowScreenPos.xy);
 
-	return shadowColor.rgb * (1.0 - shadowColor.a); // we use 1 - the alpha to get how much light is let through and multiply that light by the color of the caster
+
+	/*
+	we use 1 - the alpha to get how much light is let through
+	and multiply that light by the color of the caster
+	*/
+	return shadowColor.rgb * (1.0 - shadowColor.a);
 }
 ```
 
