--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -11,9 +11,11 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
 To the Iris docs!
 
-I jope tour journey here was a food one, and that you have come to the right place. If you are here because you are a shader developer or want ro become one, your in the right place. If not, I hope you find what you are looking for.
+Iris is a shader loader that is integrated with sodium, with support for modern shaders, built from the ground up for ease of use. Weather your new to shader development, want to migrate your shader from optifine, or just need a refresher on what Iris can do, you have come to the right place. 
 
-================
+If you can't find what you are looking for, reach out to us on the Iris Discord
+
+Now, if you are feeling a bit lost, why dont you look into the items bellow.
 
 ## Core Reference
 
