--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -13,7 +13,7 @@ To the Iris docs!
 
 Iris is a shader loader that is integrated with sodium, with support for modern shaders, built from the ground up for ease of use. Weather your new to shader development, want to migrate your shader from optifine, or just need a refresher on what Iris can do, you have come to the right place. 
 
-If you can't find what you are looking for, reach out to us on the Iris Discord
+If you can't find what you are looking for, reach out to us on the [Iris Discord](https://discord.com/invite/jQJnav2jPu).
 
 Now, if you are feeling a bit lost, why dont you look into the items bellow.
 
