--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -9,7 +9,7 @@ sidebar:
 
 import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
-To the Iris docs!
+...to the Iris docs!
 
 Iris is a shader loader that is integrated with sodium, with support for modern shaders, built from the ground up for ease of use. Weather your new to shader development, want to migrate your shader from optifine, or just need a refresher on what Iris can do, you have come to the right place. 
 
