--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -11,7 +11,7 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
 ...to the Iris docs!
 
-Iris is a shader loader that is integrated with sodium, with support for modern shaders, built from the ground up for ease of use. Weather your new to shader development, want to migrate your shader from optifine, or just need a refresher on what Iris can do, you have come to the right place. 
+Iris is a shader loader that is integrated with [Sodium](https://modrinth.com/mod/sodium/), with support for modern shaders, built from the ground up for ease of use. Whether you're new to shader development, want to migrate your shader from Optifine, or just need a refresher on what Iris can do, you can find everything you need to know right here.
 
 If you can't find what you are looking for, reach out to us on the [Iris Discord](https://discord.com/invite/jQJnav2jPu).
 
