--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -15,7 +15,7 @@ Iris is a shader loader that is integrated with [Sodium](https://modrinth.com/mo
 
 If you can't find what you are looking for, reach out to us on the [Iris Discord](https://discord.com/invite/jQJnav2jPu).
 
-Now, if you are feeling a bit lost, why dont you look into the items bellow.
+If you're feeling a bit lost, why don't you have a look at the items below.
 
 ## Core Reference
 
