fix: switch dh link to uniforms overview

--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -23,9 +23,9 @@ There on the left, look in the nav bar! On mobile, you'll need to hit that hambu
 
 ## Quick Reference
 <LinkCard
-  title="Distant Horizons"
-  description="How to support Distant Horizons in your shader."
-  href="/reference/mod/dh/dh_overview/"
+  title="Uniforms"
+  description="See what uniforms Iris supports."
+  href="/reference/uniforms/overview"
 />
 <LinkCard
   title="Feature Flags"
