Mod: Removed beta tags, improved constantMood description

--- a/src/content/docs/reference/Macros/IRIS_VERSION.mdx
+++ b/src/content/docs/reference/Macros/IRIS_VERSION.mdx
@@ -5,8 +5,8 @@ sidebar:
   label: IRIS_VERSION
   order: 1
   badge:
-    text: Iris 1.8 Beta
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `IRIS_VERSION`
