--- a/src/content/docs/reference/Shaders.Properties/features.mdx
+++ b/src/content/docs/reference/Shaders.Properties/features.mdx
@@ -37,7 +37,7 @@ Enables or disables rendering of the sun texture in `gbuffers_skytextured`.
 ----------------
 
 
-## sky <Badge text="Iris Beta 1.8 Exclusive" variant="note" size="medium" />
+## sky <Badge text="Iris Exclusive" variant="tip" size="medium" />
 ```properties
 sky=<true|false>
 ```
@@ -46,7 +46,7 @@ Enables or disables rendering of the vanilla sky in `gbuffers_skybasic`. This in
 ----------------
 
 
-## stars <Badge text="Iris Beta 1.8 Exclusive" variant="note" size="medium" />
+## stars <Badge text="Iris Exclusive" variant="tip" size="medium" />
 ```properties
 stars=<true|false>
 ```
