--- a/src/content/docs/reference/Shaders.Properties/overview.mdx
+++ b/src/content/docs/reference/Shaders.Properties/overview.mdx
@@ -85,20 +85,20 @@ Feature flags are an Iris system to query the activation state of certain featur
 
 
 ### Features / Options
-| Directive                                                                                | Description                                                                                                             | Tag                                                |
-| ---------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------- |
-| [clouds](/reference/shadersproperties/features#clouds)                                   | Enables or disables vanilla cloud rendering                                                                             |                                                    |
-| [moon](/reference/shadersproperties/features#moon)                                       | Enables or disables rendering of the moon texture in `gbuffers_skytextured`                                             |                                                    |
-| [sun](/reference/shadersproperties/features#sun)                                         | Enables or disables rendering of the sun texture in `gbuffers_skytextured`                                              |                                                    |
-| [sky](/reference/shadersproperties/features#sky)                                         | Enables or disables rendering of vanilla sky in `gbuffers_skybasic`                                                     | <Badge text="Iris Beta Exclusive" variant="note"/> |
-| [stars](/reference/shadersproperties/features#stars)                                     | Enables or disables rendering of stars in the sky in `gbuffers_skybasic`                                                | <Badge text="Iris Beta Exclusive" variant="note"/> |
-| [underwaterOverlay](/reference/shadersproperties/features#underwateroverlay)             | Enables or disables the water texture overlay when the player is underwater                                             |                                                    |
-| [vignette](/reference/shadersproperties/features#vignette)                               | Enables or disables rendering of the vignette overlay                                                                   |                                                    |
-| [oldHandLight](/reference/shadersproperties/features#oldhandlight)                       | Sets heldBlockLightValue to use whichever hand's value is higher (for legacy support)                                   |                                                    |
-| [oldLighting](/reference/shadersproperties/features#oldlighting)                         | Enables the "old lighting", which applies a lighting multiplier in the color attribute based on the block's orientation |                                                    |
-| [separateAo](/reference/shadersproperties/features#separateao)                           | Controls whether vanilla AO is stored in the RGB or A components of the color vertex attribute                          |                                                    |
-| [supportsColorCorrection](/reference/shadersproperties/features#supportscolorcorrection) | Allows the shader to perform its own conversion to a different color space                                              | <Badge text="Iris Exclusive" variant="tip"/>       |
-| [weather](/reference/shadersproperties/features#weather)                                 | Enables or disables weather (rain & snow) geometry and rain splash particles.                                           | <Badge text="Iris Beta Exclusive" variant="note"/> |
+| Directive                                                                                | Description                                                                                                             | Tag                                          |
+| ---------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------- | -------------------------------------------- |
+| [clouds](/reference/shadersproperties/features#clouds)                                   | Enables or disables vanilla cloud rendering                                                                             |                                              |
+| [moon](/reference/shadersproperties/features#moon)                                       | Enables or disables rendering of the moon texture in `gbuffers_skytextured`                                             |                                              |
+| [sun](/reference/shadersproperties/features#sun)                                         | Enables or disables rendering of the sun texture in `gbuffers_skytextured`                                              |                                              |
+| [sky](/reference/shadersproperties/features#sky)                                         | Enables or disables rendering of vanilla sky in `gbuffers_skybasic`                                                     | <Badge text="Iris Exclusive" variant="tip"/> |
+| [stars](/reference/shadersproperties/features#stars)                                     | Enables or disables rendering of stars in the sky in `gbuffers_skybasic`                                                | <Badge text="Iris Exclusive" variant="tip"/> |
+| [underwaterOverlay](/reference/shadersproperties/features#underwateroverlay)             | Enables or disables the water texture overlay when the player is underwater                                             |                                              |
+| [vignette](/reference/shadersproperties/features#vignette)                               | Enables or disables rendering of the vignette overlay                                                                   |                                              |
+| [oldHandLight](/reference/shadersproperties/features#oldhandlight)                       | Sets heldBlockLightValue to use whichever hand's value is higher (for legacy support)                                   |                                              |
+| [oldLighting](/reference/shadersproperties/features#oldlighting)                         | Enables the "old lighting", which applies a lighting multiplier in the color attribute based on the block's orientation |                                              |
+| [separateAo](/reference/shadersproperties/features#separateao)                           | Controls whether vanilla AO is stored in the RGB or A components of the color vertex attribute                          |                                              |
+| [supportsColorCorrection](/reference/shadersproperties/features#supportscolorcorrection) | Allows the shader to perform its own conversion to a different color space                                              | <Badge text="Iris Exclusive" variant="tip"/> |
+| [weather](/reference/shadersproperties/features#weather)                                 | Enables or disables weather (rain & snow) geometry and rain splash particles.                                           | <Badge text="Iris Exclusive" variant="tip"/> |
 
 
 ### Rendering
