--- a/src/content/docs/reference/Macros/IRIS_HAS_TRANSLUCENCY_SORTING.mdx
+++ b/src/content/docs/reference/Macros/IRIS_HAS_TRANSLUCENCY_SORTING.mdx
@@ -5,8 +5,8 @@ sidebar:
   label: IRIS_HAS_TRANSLUCENCY_SORTING
   order: 1
   badge:
-    text: Iris 1.8 Beta
-    variant: caution
+    text: Iris Only
+    variant: tip
 ---
 
 ### `IRIS_HAS_TRANSLUCENCY_SORTING`
