--- a/src/content/docs/guides/Beginners/Your First Shader/4_shadows.mdx
+++ b/src/content/docs/guides/Beginners/Your First Shader/4_shadows.mdx
@@ -1,6 +1,6 @@
 ---
 title: Shadows
-description: Implement basic diffuse shading in a composite pass
+description: Add shadows to your diffuse shading
 sidebar:
   label: Shadows
   order: 4
