mod: update IRIS_TAG_SUPPORT to use >= 2

--- a/src/content/docs/reference/Miscellaneous/block_properties.mdx
+++ b/src/content/docs/reference/Miscellaneous/block_properties.mdx
@@ -42,7 +42,7 @@ To specify a tag, use the following syntax `%<tag>` instead of the old block ID 
 #endif
 
 # for example
-#ifdef IRIS_TAG_SUPPORT
+#if IRIS_TAG_SUPPORT >= 2
   block.9 = %minecraft:leaves %logs
 #endif
 ```
