--- a/src/content/docs/reference/Macros/IRIS_TAG_SUPPORT.mdx
+++ b/src/content/docs/reference/Macros/IRIS_TAG_SUPPORT.mdx
@@ -16,7 +16,7 @@ This macro is defined if the version of Iris supports tags for defining block ID
 Prior to Iris 1.8 the lines in [`block.properties`](/reference/miscellaneous/block_properties) took priority based on the order in the file. For Iris 1.8 and later, individual entires always take priority over tags, regardless of their order. For Iris versions with this change, `IRIS_TAG_SUPPORT` is defined as `2` and can be checked in [`block.properties`](/reference/miscellaneous/block_properties) like so:
 
 ```glsl
-#if IRIS_TAG_SUPPORT == 2
+#if IRIS_TAG_SUPPORT >= 2
   ...
 #endif
 ```
