--- a/src/content/docs/reference/overview.mdx
+++ b/src/content/docs/reference/overview.mdx
@@ -11,24 +11,30 @@ import { LinkCard, CardGrid } from '@astrojs/starlight/components';
 
 ...to the Iris docs!
 
-Iris is a shader loader that is integrated with [Sodium](https://modrinth.com/mod/sodium/), with support for modern shaders, built from the ground up for ease of use. Whether you're new to shader development, want to migrate your shader from Optifine, or just need a refresher on what Iris can do, you can find everything you need to know right here.
+Iris is a shader loader that is integrated with [Sodium](https://modrinth.com/mod/sodium/), with support for modern shaders, built from the ground up for ease of use. Whether you're new to shader development, want to migrate your shaderpack from Optifine, or just need a refresher on what Iris can do, you can find everything you need to know right here.
 
 If you can't find what you are looking for, reach out to us on the [Iris Discord](https://discord.com/invite/jQJnav2jPu).
 
 If you're feeling a bit lost, why don't you have a look at the items below.
 
-## Core Reference
-
-There on the left, look in the nav bar! On mobile, you'll need to hit that hamburger icon on the top right!
-
 ## Quick Reference
 <LinkCard
+  title="Programs"
+  description="The shader programs you can create, and what order they run in."
+  href="/reference/programs/overview"
+/>
+<LinkCard
   title="Uniforms"
-  description="See what uniforms Iris supports."
+  description="Values available to all programs."
   href="/reference/uniforms/overview"
 />
 <LinkCard
+  title="Attributes"
+  description="Per-vertex data available only in the vertex shader."
+  href="/reference/attributes/overview"
+/>
+<LinkCard
   title="Feature Flags"
-  description="Query the activation state of certain features."
+  description="Query the activation state of certain Iris exclusive features."
   href="/reference/shadersproperties/flags"
 />
