feat: added multi sidebar plugin

--- a/src/content/docs/current/How To/coordinate_spaces.mdx
+++ b/src/content/docs/current/How To/coordinate_spaces.mdx
@@ -12,7 +12,7 @@ At the start of a shader program, the vertex position is provided in the form of
 
 ## Space Conversion Cheatsheet
 This page is designed to be read in tandem with this cheatsheet, which shows every space and how to convert between them.
-![Space Conversion Cheatsheet](../../../assets/coordinate_spaces/spaces.webp)
+![Space Conversion Cheatsheet](../../../../assets/coordinate_spaces/spaces.webp)
 **Source: [shaderLABS Wiki](https://shaderlabs.org/wiki/Coordinate_Spaces)**
 
 ## Spaces
